# internal/controller/http/v1/packet.go
@@ -2,11 +2,11 @@ package v1
 
 import (
 	"errors"
+	"fmt"
 	"github.com/gofiber/fiber/v2"
 	"github.com/hong195/aggregator-sevice/internal/repo"
 	"github.com/hong195/aggregator-sevice/internal/usecase/query"
 	"net/http"
-	"strconv"
 )
 
 // @Summary     Find packet
@@ -40,13 +40,13 @@ func (r *V1) findPacket(ctx *fiber.Ctx) error {
 // @Tags        packets
 // @Accept      json
 // @Produce     json
-// @Param       start query int true  "Start time (Unix ms)"
-// @Param       end   query int true  "End time (Unix ms)"
+// @Param       start query string true  "Start time (time.RFC3339 format)"
+// @Param       end   query string true  "End time (time.RFC3339 format)"
 // @Success     200 {array} query.DataPacketView
 // @Failure     400 {object} response.Error "missing/invalid query params"
 // @Failure     422 {object} response.Error "end < start"
 // @Failure     500 {object} response.Error
-// @Router      /api/v1/packets/packets [get]
+// @Router      /api/v1/packets [get]
 func (r *V1) listPackets(ctx *fiber.Ctx) error {
 	startStr := ctx.Query("start")
 	endStr := ctx.Query("end")
@@ -55,21 +55,15 @@ func (r *V1) listPackets(ctx *fiber.Ctx) error {
 		return errorResponse(ctx, http.StatusBadRequest, "query params 'start' and 'end' are required (unix ms)")
 	}
 
-	startMs, err := strconv.ParseInt(startStr, 10, 64)
-	if err != nil {
-		return errorResponse(ctx, http.StatusBadRequest, "invalid 'start' (must be unix ms)")
-	}
-	endMs, err := strconv.ParseInt(endStr, 10, 64)
-	if err != nil {
-		return errorResponse(ctx, http.StatusBadRequest, "invalid 'end' (must be unix ms)")
-	}
+	fmt.Println("startStr:", startStr, "endStr:", endStr)
 
 	q := query.FindDataPacketByPeriodQuery{
-		Start: startMs,
-		End:   endMs,
+		Start: startStr,
+		End:   endStr,
 	}
 
 	items, handleErr := r.t.Queries.FindDataPacketByPeriod.Handle(ctx.UserContext(), q)
+
 	if handleErr != nil {
 		if errors.Is(handleErr, repo.ErrInvalidPeriod) {
 			return errorResponse(ctx, http.StatusUnprocessableEntity, "end must be >= start")
